--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [16.x]
     
     steps:
     - uses: actions/checkout@v3
@@ -24,5 +24,6 @@ jobs:
 
     - name: Build
       run: |
+        npm login --scope=@OWNER --registry=https://npm.pkg.github.com < ${{ secrets.authtoken }}
         npm install
         npx webpack
