--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -24,8 +24,7 @@ jobs:
 
     - name: Build
       run: |
-        npm login --scope=@fleisar --registry=https://npm.pkg.github.com
-        fleisar
-        ${{ secrets.authtoken }}
+        npm install -g npm-cli-login
+        npm-cli-login -u "fleisar" -p "${{ secrets.authtoken }}" -e "me@fle.su" -r "https://npm.pkg.github.com" -s "@fleisar"
         npm install
         npx webpack
