--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "compile-styles": "sass ./src:./dist",
     "compile-scripts": "webpack --config webpack.config.js",
     "compile": "npm run compile-styles && npm run compile-scripts",
-    "copy": "copyfiles -u 1 ./src/**/*.html ./dist && copyfiles -u 1 ./src/assets/fonts/**/* ./dist",
+    "copy": "copyfiles -u 1 ./src/**/*.html ./dist && copyfiles -u 1 ./src/assets/fonts/**/* ./dist && copyfiles -u 1 ./src/**/*.json ./dist",
     "build": "rimraf ./dist && npm run copy && npm run compile"
   },
   "author": "Fleisar",
