--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,14 +1,14 @@
 {
 	"name": "KDK Anime",
 	"short_name": "KDK",
-	"start_url": "/",
+	"start_url": "./",
 	"display": "standalone",
 	"background_color": "#f0f0f0",
 	"categories": ["entertainment", "utilities"],
 	"lang": "ru-RU",
 	"protocol_handlers": [
 		{
-			"protocol": "kdk",
+			"protocol": "web+kdk",
 			"url": "#play/%s"
 		}
 	],
