--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "es5",
-		"jsx": "react",
+		"lib": [ "es2019", "es6", "dom", "webworker" ],
 		"sourceMap": true,
 		"allowJs": true,
 		"moduleResolution": "Node",
