--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "rules": {
         "indent": "off",
         "no-tabs": 0,
-        "@typescript-eslint/indent": ["error", "tab"]
+        "@typescript-eslint/indent": ["error", "tab"],
+        "react/jsx-filename-extension": "off"
     }
 }
