--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "sass": "^1.49.11",
     "source-map-loader": "^3.0.1",
     "ts-loader": "^9.2.8",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.6.3",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "@fleisar/kodik.ts": "^1.0.1",
-    "vanilla-lazyload": "^17.7.0"
+    "vanilla-lazyload": "^17.7.0",
+    "tsxe": "^2.1.2"
   }
 }
