--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 		"baseUrl": "src",
 		"module": "commonjs",
 		"lib": [ "es2021", "es6", "dom", "webworker" ],
+		"target": "es2017",
 		"sourceMap": true,
 		"allowJs": true,
 		"moduleResolution": "Node",
@@ -11,7 +12,7 @@
 		"jsxFactory": "TSXe.createElement",
 		"jsxFragmentFactory": "TSXe.Fragment",
 		"paths": {
-			"@kdk-core/*": ["assets/js/*"]
+			"@kdk/kdk-anime/App/*": ["App/*"]
 		}
 	},
 	"include": [
